@@ -18,7 +18,7 @@ libucommon_la_LDFLAGS = @UCOMMON_LIBS@ @UCOMMON_CLINK@ $(RELEASE)
 libucommon_la_SOURCES = object.cpp linked.cpp string.cpp mapped.cpp shell.cpp \
 	counter.cpp bitmap.cpp timer.cpp memory.cpp socket.cpp access.cpp \
 	thread.cpp fsys.cpp cpr.cpp vector.cpp xml.cpp stream.cpp persist.cpp \
-	keydata.cpp
+	keydata.cpp numbers.cpp
 
 
 
